# image_file_changer

./: CMakeLists.txt  LICENSE  README.md  fun.heic
include/: batch_processor.h  converter.h  gui.h
src/: batch_processor.c  converter.c  gui.c  main.c  main_gui.c
